--- a/journal/201812.md
+++ b/journal/201812.md
@@ -14,6 +14,8 @@ For web based projects like Politeia, new merged work is usually available after
 
 [dcrd](https://github.com/decred/dcrd):
 
+* 1.4.0 RC1 https://www.reddit.com/r/decred/comments/a6a5fz/dcrd_version_140_release_candidate_1/
+
 * Smart fee estimator finally [merged](https://github.com/decred/dcrd/pull/1434) that allows to either minimize mining delay or the fee rate, depending on what user needs. The feature is explained in detail in its [issue](https://github.com/decred/dcrd/issues/1412).
 * Module versions were bumped in preparation of v1.4.0 release https://github.com/decred/dcrd/pull/1541
 
@@ -74,6 +76,7 @@ Other:
 
 * Raspberry Pi offline tx signer by @matheusd https://www.reddit.com/r/decred/comments/a3bfyi/raspberry_pi_offline_transaction_signer/
 * [authit](https://authit.co/), dcrtime UI proof of concept. Source is [here](https://github.com/getset0/authit), discussed [here](https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$154454253739832PpXgR:decred.org). Credits to @fernandoabolafio, @tiagoalvesdulce and @vctt.
+* atomicswap PoC work https://github.com/xaur/decred-issues/issues/8#issuecomment-447220453
 
 Dev activity stats for December: {} active PRs, {} master commits, {} added and {} deleted lines spread across {} repositories. Contributions came from {}-{} developers per repository. ([chart]({}))
 
@@ -90,6 +93,8 @@ Around summer [@30000fps](https://twitter.com/30000fps) began contributing to De
 ## Governance
 
 {high level recap of decision-making activity, most important events, defer to Politeia Digest for the rest}
+
+{income and spendings from treasury}
 
 ## Network
 
@@ -177,7 +182,8 @@ Above are most interesting articles, but more were published on the web. The [de
 
 Translations:
 
-* {}
+* Decred Journal - November 2018 [in Spanish](https://medium.com/@decred_es/bolet%C3%ADn-mensual-decred-noviembre-2018-52168692e624) by @elian.
+* You can find all translations of Decred Journal on the [home page](https://xaur.github.io/decred-news/)
 
 Videos:
 
