--- a/journal/201812.md
+++ b/journal/201812.md
@@ -35,7 +35,8 @@ For web based projects like Politeia, new merged work is usually available after
 
 [Politeia](https://github.com/decred/politeia):
 
-* Tightened security {wait for merge} https://github.com/decred/politeiagui/pull/935
+* Yet another [security tightening](https://github.com/decred/politeiagui/pull/935) {wait for merge} pushed Politeia's rating to A+ at [securityheaders.com](https://securityheaders.com/?q=test-proposals.decred.org&followRedirects=on), which has put it into top 3% and the Hall of Fame on that site.
+
 * Help messages for politeiawwwcli commands
   * https://github.com/decred/politeia/pull/625
   * {wait for merge or move to Jan} https://github.com/decred/politeia/pull/640
@@ -43,6 +44,8 @@ For web based projects like Politeia, new merged work is usually available after
 * Retry on failed request https://github.com/decred/politeia/pull/639
 * Don't let admins abandon the proposal with authorized voting https://github.com/decred/politeiagui/pull/936
 * Revision diffs {wait for merge} https://github.com/decred/politeiagui/pull/940
+
+Implementation of admin backups is in progress {link}
 
 [Android wallet](https://github.com/decred/dcrandroid): {}
 
@@ -77,6 +80,8 @@ Other:
 * Raspberry Pi offline tx signer by @matheusd https://www.reddit.com/r/decred/comments/a3bfyi/raspberry_pi_offline_transaction_signer/
 * [authit](https://authit.co/), dcrtime UI proof of concept. Source is [here](https://github.com/getset0/authit), discussed [here](https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$154454253739832PpXgR:decred.org). Credits to @fernandoabolafio, @tiagoalvesdulce and @vctt.
 * atomicswap PoC work https://github.com/xaur/decred-issues/issues/8#issuecomment-447220453
+* Company 0 does not plan to charge Treasury for the privacy work, as clarified in this thread https://www.reddit.com/r/decred/comments/a6l00i/why_is_the_community_not_voting_on_implementing/
+* coordinated effort to translate Decred articles https://github.com/artikozel/decred-translations
 
 Dev activity stats for December: {} active PRs, {} master commits, {} added and {} deleted lines spread across {} repositories. Contributions came from {}-{} developers per repository. ([chart]({}))
 
@@ -95,6 +100,8 @@ Around summer [@30000fps](https://twitter.com/30000fps) began contributing to De
 {high level recap of decision-making activity, most important events, defer to Politeia Digest for the rest}
 
 {income and spendings from treasury}
+
+https://matrix.to/#/!lbzTjhzNbIaDbuAxkS:decred.org/$154502025444491kdLiq:decred.org discusses staying frugal with the spendings, especially during bad market conditions
 
 ## Network
 
@@ -130,7 +137,13 @@ https://twitter.com/LedgerHQ/status/1072446149863329792
 
 > We are excited to announce that the Ledger Nano S and Ledger Blue are now compatible with Decred. Decred is now available on Ledger Live and marks the first native Ledger Live integration since its launch. Read more here: https://www.ledger.fr/2018/12/11/ledger-nano-s-ledger-blue-and-ledger-live-now-support-decred-transactions/
 
-{explain "first native Ledger Live integration since its launch"}
+{explain:
+
+* what this means: "first native Ledger Live integration since its launch"
+* what is Ledger Live? is it a wallet? is it a web wallet? do users control keys?
+* does it share data with 3rd party servers?
+* is it open source?
+* is firmware open source?}
 
 Cobo Wallet [announced](https://twitter.com/cobo_wallet/status/1070805250376900609) a custodial staking service. Please do your research to understand the implications like who controls the keys, whether you lose consensus and Politeia voting rights, and so on. Discussed [here](https://matrix.to/#/!kdpEDksmOMNrlMqffD:decred.org/$154413818735775gNTIq:decred.org){keep? dig whether the service controls keys and consensus/Pi voting rights}
 
@@ -153,6 +166,8 @@ Ditto people joined #marketing and the room was very hot throughout the month. T
 @Dustorf, @jy-p and Ditto met in New York, report [here](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$154413732235771XIVBH:decred.org) {extract highlights}
 
 @liz_bagot gave the inaugural Ditto Bi-Weekly Update [here](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$154482468943386bBAIp:decred.org?via=decred.org&via=matrix.org)
+
+Now 5 people in total have the rights to tweet via @decredproject Twitter account.
 
 Targeted advertising report for {month} was posted by @{}. {short recap}. Read more [here]({link}).
 
@@ -186,6 +201,7 @@ Translations:
 
 * Decred Journal - November 2018 [in Spanish](https://medium.com/@decred_es/bolet%C3%ADn-mensual-decred-noviembre-2018-52168692e624) by @elian.
 * You can find all translations of Decred Journal on the [home page](https://xaur.github.io/decred-news/)
+* [How to Get Hired as a Decred Contractor](https://medium.com/decred/how-to-get-hired-as-a-decred-contractor-e1435842df10) by @Haon - [in Chinese](https://www.weibo.com/ttarticle/p/show?id=2309404315589245067163) by @guang
 
 Videos:
 
@@ -245,6 +261,8 @@ VTC 51% attack:
 EOS block producer [began paying](https://cointelegraph.com/news/eos-node-offers-users-financial-rewards-for-votes-reignites-decentralization-debate) holders that voted for it.
 
 {DEX}
+
+Latest exchanges volumes report by [blockchaintransparency.org](https://www.blockchaintransparency.org/) concluded that of the coinmarketcap.com top 25 BTC pairs over 80% of volume is wash traded. Another unhappy finding is that the average project spent over $50,000 on listing fees. The report has spurred [the idea](https://github.com/xaur/decred-issues/issues/34) to analyze the trading volume of DCR.
 
 {related exchanges and websites}
 
