--- a/journal/201812.md
+++ b/journal/201812.md
@@ -14,11 +14,8 @@ Unless there is a binary release, new features and bugfixes are available on the
 
 For web based projects like Politeia, new merged work is usually available after the deployment which happens somewhere after the merge. For dcrdata block explorer, deployment is a bit more complex: new features go to master, are deployed to alpha, then to beta, and finally to stable. {keep or revert to per-project notice?}
 
-[dcrd](https://github.com/decred/dcrd):
+[dcrd](https://github.com/decred/dcrd): On December 15th [Release Candidate 1 of v1.4](https://www.reddit.com/r/decred/comments/a6a5fz/dcrd_version_140_release_candidate_1/) was announced. This version includes [smart fee estimator](https://github.com/decred/dcrd/pull/1434), a long awaited feature that allows selections to either minimize mining delay or the fee rate, depending on what user needs. The feature is explained in detail in its [issue](https://github.com/decred/dcrd/issues/1412). Whitelisting peers is now supported [regardless of number of connections](https://github.com/decred/dcrd/pull/1516) allowing greater control over which nodes dcrd connects to, including wallets configured to use SPV mode.  Several performace improvements to initial sync, validation and network operations are included, users choosing to upgrade should note there is a one time data database migration to incorporate these changes which will take 30-60 minutes on average depending on hardware.
 
-* 1.4.0 RC1 https://www.reddit.com/r/decred/comments/a6a5fz/dcrd_version_140_release_candidate_1/
-
-* Smart fee estimator finally [merged](https://github.com/decred/dcrd/pull/1434) that allows to either minimize mining delay or the fee rate, depending on what user needs. The feature is explained in detail in its [issue](https://github.com/decred/dcrd/issues/1412).
 * Module versions were bumped in preparation of v1.4.0 release https://github.com/decred/dcrd/pull/1541
 
 A vulnerability {link} was discovered in `go get` tool that allowed remote code execution when using a malicious repository. dcrd and dcrwallet were not affected because they recently switched to a more secure modules system. Latest versions of dependencies are not automatically grabbed like they are in npm. Additionally, for dcrd all changes to dependencies except the runtime are audited. That is part of the reason it takes so much effort to prepare dcrd releases and why the number of dependencies should be limited. Discussed in [this chat](https://matrix.to/#/!HEeJkbPRpAqgAwhXWO:decred.org/$154476448242812wqgkf:decred.org)
