update to dev/politia (all links integrated)

--- a/journal/201812.md
+++ b/journal/201812.md
@@ -22,10 +22,7 @@ A vulnerability {link} was discovered in `go get` tool that allowed remote code 
 
 [Decrediton](https://github.com/decred/decrediton): On December 16th, RC1 (Release Candidate 1) of v1.4 [was posted](https://github.com/decred/decred-binaries/releases/tag/v1.4.0-rc1). Initial Trezor support [is included](https://github.com/decred/decrediton/pull/1547) allowing users to use Decrediton as a "watch-only" wallet signing transactions from Trezor. The feature will likely be hidden behind a config option until it gets enough testing.  Staking is not included in the initial version. Selecting SPV (simple payment verification) was made easier with a new [SPV selection page](https://github.com/decred/decrediton/pull/1766). Animations from [Eeter](http://www.eeter.co/) were [added for menu hover](https://github.com/decred/decrediton/pull/1816) along with a number of other style improvements including restyling [the governance page](https://github.com/decred/decrediton/pull/1844) and merging the requirements for [color themes](https://github.com/decred/decrediton/pull/1749). Users of the Raspberry Pi (and other ARM processor device) will have access to Decrediton thanks to [work by MatheusD](https://github.com/decred/decrediton/pull/1904) (note that [Command Line App Suite](https://www.decred.org/downloads/) has always been available for Pi). [Various design fixes](https://github.com/decred/decrediton/pull/1844), [big fixes](https://github.com/decred/decrediton/pull/1874) and [required patches]() were implemented. An [updated version of release notes](https://github.com/decred/decrediton/pull/1854) that allows translations and past information got included. A new feature to [contruct unsigned transactions](https://github.com/decred/decrediton/pull/1864) for watch-only wallets was developed (so transactions could be created on the watch-only wallet then signed and broadcast on the full wallet).
 
-[Politeia](https://github.com/decred/politeia): The latest [security tightening](https://github.com/decred/politeiagui/pull/935) {wait for merge} pushed Politeia's rating to A+ at [securityheaders.com](https://securityheaders.com/?q=test-proposals.decred.org&followRedirects=on), which has put it into the Security Headers top 3% and the Hall of Fame!  [Comment tally tracking](https://github.com/decred/politeia/pull/610) was standardized and integrated in Politeia Web (removed from Politeia Daemon) and an [admin restriction around proposal abandoning](https://github.com/decred/politeiagui/pull/936) was integrated. Help messages were [added for common commands](https://github.com/decred/politeia/pull/625) first then (all major commands)[https://github.com/decred/politeia/pull/640].
-
-* Retry on failed request https://github.com/decred/politeia/pull/639
-* Revision diffs {wait for merge} https://github.com/decred/politeiagui/pull/940
+[Politeia](https://github.com/decred/politeia): The latest [security tightening](https://github.com/decred/politeiagui/pull/935) {wait for merge} pushed Politeia's rating to A+ at [securityheaders.com](https://securityheaders.com/?q=test-proposals.decred.org&followRedirects=on), which has put it into the Security Headers top 3% and the Hall of Fame! The [ticket order](https://github.com/decred/politeia/issues/565) privacy enhancement development was completed for the voting tool along with a [bugfix to allow Tor](https://github.com/decred/politeia/pull/639) usage. [Comment tally tracking](https://github.com/decred/politeia/pull/610) was standardized and integrated in Politeia Web (removed from Politeia Daemon) and an [admin restriction around proposal abandoning](https://github.com/decred/politeiagui/pull/936) was integrated. Help messages were [added for common commands](https://github.com/decred/politeia/pull/625) first then (all major commands)(https://github.com/decred/politeia/pull/640) were added.  The Politeia bulid instructions [got an overhaul](https://github.com/decred/politeia/pull/645).
 
 Implementation of admin backups is in progress {link}
 
