--- a/journal/201812.md
+++ b/journal/201812.md
@@ -46,6 +46,7 @@ Congrats and thanks to dcrdata team!
 * fixes for browsers with javascript disabled https://github.com/decred/dcrdata/pull/852 _(special thanks from an anti-js dinosaur)_.
 * {elaborate on the version bump from 3.2 4.0}
 * Docker image to build and test dcrdata https://github.com/decred/dcrdocker/pull/45
+* new FAQ wiki page for developers https://github.com/decred/dcrdata/wiki/FAQ
 
 Public dcrdata Tor service was temporarily shut down after a DDoS attack. After some [discussion](https://matrix.to/#/!YwropUjOvDAjfbVSzi:decred.org/$154480347443065mKiKp:decred.org) it was brought back at [dcrdata2opeenddl.onion](http://dcrdata2opeenddl.onion/).
 
@@ -108,6 +109,8 @@ Block 300,000 was mined this month. The mined DCR is now over 9,000,000! Congrat
 ## Mining
 
 Whatsminer D1 review was posted in Chinese [here](https://www.cybtc.com/forum.php?mod=viewthread&tid=41377&fromuid=6) ([Google translation](https://translate.google.com/translate?sl=auto&tl=en&hl=en&u=https%3A%2F%2Fwww.cybtc.com%2Fforum.php%3Fmod%3Dviewthread%26tid%3D41377%26fromuid%3D6)).
+
+A guide to setup Whatsminer from Luxor https://medium.com/luxor/whatsminer-d1-decred-setup-guide-182eeccaed99
 
 Be careful when ordering miners from eBay, you may get [just the weight](https://matrix.to/#/!NNzHoaSdnsbZDQOXJr:decred.org/$154491308943809bYuYs:decred.org).
 
@@ -293,6 +296,8 @@ Slack can close your account if you happen to be from a wrong country https://tw
 
 * https://twitter.com/aaomidi/status/1075621119028314112
 * https://www.engadget.com/2018/12/22/iran-sanctions-slack/
+
+{write something on a wave of layoffs in the space that did not affect Decred}
 
 ## About This Issue
 
