--- a/journal/201812.md
+++ b/journal/201812.md
@@ -116,6 +116,8 @@ Several contractors shared their onboarding experiences in this chat, a good rea
 
 {high level recap of decision-making activity, most important events, defer to Politeia Digest for the rest}
 
+{bounty prop passed, interesting fact about pseudonymous contributor https://twitter.com/lukebp_/status/1078691610253250560}
+
 {income and spendings from treasury}
 
 https://matrix.to/#/!lbzTjhzNbIaDbuAxkS:decred.org/$154502025444491kdLiq:decred.org discusses staying frugal with the spendings, especially during bad market conditions
@@ -141,6 +143,8 @@ A guide to setup Whatsminer from Luxor https://medium.com/luxor/whatsminer-d1-de
 Be careful when ordering miners from eBay, you may get [just the weight](https://matrix.to/#/!NNzHoaSdnsbZDQOXJr:decred.org/$154491308943809bYuYs:decred.org).
 
 whatsminer.net [reported](https://twitter.com/whatsminer/status/1075810531838091265) to have shipped all batch 1 orders of the D1.
+
+Antminer DR5 https://twitter.com/Antminer_main/status/1072435004142182400
 
 ## Integrations
 
