--- a/journal/201812.md
+++ b/journal/201812.md
@@ -86,14 +86,13 @@ Public dcrdata Tor service was temporarily shut down after a DDoS attack. After 
 
 Other:
 
-* @matheusd has proposed a [Raspberry Pi offline tx signer](https://www.reddit.com/r/decred/comments/a3bfyi/raspberry_pi_offline_transaction_signer/) and produced a [live demo](https://www.youtube.com/watch?v=xbSoZ7GH1_k&t=7s) of it
-* [authit](https://authit.co/), dcrtime UI proof of concept. Source is [here](https://github.com/getset0/authit), discussed [here](https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$154454253739832PpXgR:decred.org). Credits to @fernandoabolafio, @tiagoalvesdulce and @vctt.
-  * the repository was moved to decred GitHub organization https://github.com/decred/authit
-* atomicswap PoC work https://github.com/xaur/decred-issues/issues/8#issuecomment-447220453
-* Company 0 does not plan to charge Treasury for the privacy work, as clarified in this thread https://www.reddit.com/r/decred/comments/a6l00i/why_is_the_community_not_voting_on_implementing/
-* pull request was submitted that adds QTUM support to atomicswap, feel free to join testing https://github.com/decred/atomicswap/pull/93
-* Discord is still the dominant source of spam, help is welcome
-* coordinated effort to translate Decred articles https://github.com/artikozel/decred-translations
+* @matheusd has proposed a [Raspberry Pi offline tx signer](https://www.reddit.com/r/decred/comments/a3bfyi/raspberry_pi_offline_transaction_signer/) and produced a [live demo](https://www.youtube.com/watch?v=xbSoZ7GH1_k&t=7s) of it.
+* [authit](https://authit.co/), dcrtime UI proof of concept. Source is [here](https://github.com/getset0/authit), discussed [here](https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$154454253739832PpXgR:decred.org). Credits to @fernandoabolafio, @tiagoalvesdulce and @vctt. The repository was moved to Decred [GitHub organization](https://github.com/decred/authit)
+* There is work being done on the UI for [atomicswaps](https://github.com/xaur/decred-issues/issues/8#issuecomment-447220453), currently at PoC stage.
+* Company 0 does not plan to charge Treasury for the privacy work, as clarified in [this thread](https://www.reddit.com/r/decred/comments/a6l00i/why_is_the_community_not_voting_on_implementing/)
+* Pull request [adding QTUM support to atomicswap](https://github.com/decred/atomicswap/pull/93) was submitted, feel free to join testing.
+* Discord is still the dominant source of spam, however, there are efforts under way to greatly reduce it via user roles, heavier moderation and user verification.
+* Efforts to coordinate vital Decred article [translation](https://github.com/artikozel/decred-translations) are being undertaken in order to introduce a greater, non-English speaking user base to core Decred concepts.
 * Decred CLI tools can be built to run on Alpine Linux that uses [musl](https://www.musl-libc.org/) (cleaner implementation of libc), read [this chat](https://matrix.to/#/!HEeJkbPRpAqgAwhXWO:decred.org/$15457968071823GYapk:decred.org) for details
 
 Dev activity stats for December: {} active PRs, {} master commits, {} added and {} deleted lines spread across {} repositories. Contributions came from {}-{} developers per repository. ([chart]({}))
@@ -126,13 +125,11 @@ https://www.reddit.com/r/decred/comments/aa5jvn/any_updates_on_antonopouloss_vei
 
 ## Network
 
-Hashrate: {start, end, low, high, variation; pool distribution}
+Hashrate: December's hashrate opened at around 167 Ph/s and closed around 183 Ph/s, peaking at 207 Ph/s and bottoming at 110 Ph/s throughout the course of the month, averaging, for the most part, at around 150 Ph/s. BeePool's share of the hashrate varied wildly between 1.3%-29%, same for F2Pool at 2.8%-49%, Luxor 1%-6.5%, Coinmine 1%-2%. Unknown hashrate accounted for 45%-70% of the entire network's computing power with a low 33% and peak of 87%. Pool distribution numbers are approximate and cannot be accurately determined.
 
-Staking: {30-day average tix price, low, high, locked DCR million and % of avail supply}
+Staking: 30-day average ticket price was 103 DCR. The price varied between 101.33 DCR and 107.09 DCR, with 4.14-4.23 million DCR locked, with highs and lows of 45.53%-46.23% of available supply at the time.
 
-Nodes: {node counts, version distribution}
-
-{any interesting analysis or events in the network}
+Nodes: As of Jan. 4 there are 211 public listening nodes and 269 normal ones per [dcred.eu](https://dcred.eu/nodeStats). Version distribution: 5.2% are v1.5.0 (pre) dev builds (+100%), 3.3% are v1.4.0 (rc1) (+100%), 13.4% are v1.4.0 (pre) (+6.9%), 43% are v1.3.0 (-7%), 28% are running v.1.2.0 (+3%), 16% are on v1.1.2 (+5%) and 7% are on v.1.1.0 (+2%).
 
 Block 300,000 was mined this month. The mined DCR is now over 9,000,000! Congratulations to all!
 
@@ -144,9 +141,9 @@ A guide to setup Whatsminer from Luxor https://medium.com/luxor/whatsminer-d1-de
 
 Be careful when ordering miners from eBay, you may get [just the weight](https://matrix.to/#/!NNzHoaSdnsbZDQOXJr:decred.org/$154491308943809bYuYs:decred.org).
 
-whatsminer.net [reported](https://twitter.com/whatsminer/status/1075810531838091265) to have shipped all batch 1 orders of the D1.
+Whatsminer.net [reported](https://twitter.com/whatsminer/status/1075810531838091265) to have shipped all batch 1 orders of the D1.
 
-Antminer DR5 https://twitter.com/Antminer_main/status/1072435004142182400
+Bitmain's [Antminer DR5](https://twitter.com/Antminer_main/status/1072435004142182400) Decred miner was introduced and was met with immediate criticism from the Twitter community.
 
 ## Integrations
 
@@ -166,7 +163,7 @@ The hardware wallet company Ledger [tweeted](https://twitter.com/LedgerHQ/status
 
 > We are excited to announce that the Ledger Nano S and Ledger Blue are now compatible with Decred. Decred is now available on Ledger Live and marks the first native Ledger Live integration since its launch. Read more here: https://www.ledger.fr/2018/12/11/ledger-nano-s-ledger-blue-and-ledger-live-now-support-decred-transactions/
 
-DCR storage is now possible through Ledger Live, an application that now acts as a one-stop-shop for accessing and interacting with your crypto assets since Ledger discontinued the use of their respective apps earlier this year.
+DCR storage is possible through Ledger Live, an application that now acts as a one-stop-shop for accessing and interacting with your crypto assets since Ledger discontinued the use of their respective apps earlier this year.
 {explain:
 
 * what this means: "first native Ledger Live integration since its launch"
@@ -195,7 +192,7 @@ Ditto people joined #marketing and the room was very hot throughout the month. T
 
 @Dustorf, @jy-p and Ditto met in New York, report available [here](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$154413732235771XIVBH:decred.org), where, amongst other things, they discussed challenges related to attracting new developers and contributors, spreading the word about Decred to knowledgeable investors, institutions, and governments, as well as going over the long term vision for the project.
 
-@liz_bagot gave the inaugural Ditto Bi-Weekly Update [here](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$154482468943386bBAIp:decred.org?via=decred.org&via=matrix.org)
+@liz_bagot gave the inaugural Ditto Bi-Weekly Update [here](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$154482468943386bBAIp:decred.org?via=decred.org&via=matrix.org).
 
 Update from Ditto for December:
 
@@ -219,7 +216,7 @@ Attended:
 
 Upcoming:
 
-* {}
+* [10 lat Bitcoina](https://10latbitcoina.com.pl/) in Warsaw, Jan. 26th. @karamble will deliver a presentation at the conference celebrating the 10th anniversary of the Bitcoin whitepaper and Bitcoin itself.
 
 {announcements from events people}
 
@@ -318,7 +315,7 @@ EOS block producer [began paying](https://cointelegraph.com/news/eos-node-offers
 
 The Growing Focus on Blockchain Governance [article](https://www.tokendaily.co/blog/the-growing-focus-on-blockchain-governance) by Chris McCoy was discussed [in #governance](https://matrix.to/#/!tIDEIWechmqCLjPiui:decred.org/$154466528741798eoKOQ:decred.org) for it's strange interpretation of Decred's vote to choose a PR firm. It claims that the decision is called _"very basic"_ and _"day-to-day"_, that it distracts _developers_ and makes _the protocol_ susceptible to mob rule. The article comes for a founder of another project active in the governance domain.
 
-2 million BTCP were mined via an exploit and went unnoticed for months until CoinMetrics noticed something is wrong with the supply and [investigated](https://coinmetrics.io/bitcoin-private) it. Developer team [posted](https://medium.com/@bitcoinprivate/official-statement-on-coinmetrics-report-6f1cef176c05) an official statement confirming the inflation exploit. The bug was merged on Jan 5 together with a patch from a bounty hunter that disengaged after receiving the reward for his work. Just one missing line of code made a huge damange to the network's value proposition. We can take a lot from this unfortunate experience: extensive test coverage, super critical review of consensus code, established reputation of developers working on mission critical parts, and having multiple implementations of the protocol are all very important to build a system we can trust money to.
+2 million BTCP were mined via an exploit and went unnoticed for months until CoinMetrics noticed something is wrong with the supply and [investigated](https://coinmetrics.io/bitcoin-private) it. Developer team [posted](https://medium.com/@bitcoinprivate/official-statement-on-coinmetrics-report-6f1cef176c05) an official statement confirming the inflation exploit. The bug was merged on Jan 5 together with a patch from a bounty hunter that disengaged after receiving the reward for his work. Just one missing line of code caused huge damage to the network's value proposition. We can take a lot from this unfortunate experience: extensive test coverage, super critical review of consensus code, established reputation of developers working on mission critical parts, and having multiple implementations of the protocol are all very important to build a system we can trust money to.
 
 There was an [attack](https://www.reddit.com/r/CryptoCurrency/comments/a9yji3/electrum_wallet_hacked_200_btc_stolen_so_far/) on Bitcoin's Electrum infrastructure. Someone started a bunch of malicious Electrum servers that prompted the user to "upgrade" to a malware version and stole 200+ BTC. Electrum model involves a network of servers that sit between clients and full nodes, which is bad for client's privacy but can also go wrong if the network of Electrum servers is not as strong as the network of more mission critical full nodes. Decred was reluctant to build Electrum infrastructure for these very problems and decided to go straight to client-side filtering approach, at the cost of postponing the release of light clients. Now that it is done, dcrwallet and Decrediton in SPV mode connect directly to full nodes.
 
@@ -347,7 +344,7 @@ Slack can close your account if you [happen to come from a wrong country](https:
 
 * https://cointelegraph.com/news/reports-bitmain-allegedly-fires-all-bch-developers-in-wave-of-redundancies
 
-[Copernicus](https://github.com/copernet/copernicus) is an implementation of the Bitcoin Cash protocol written in Go that utilizes btcsuite. The authors [acknowledges](https://www.copernicuscore.org/btcd.html) btcsuite's contribution to Bitcoin ecosystem.
+[Copernicus](https://github.com/copernet/copernicus) is an implementation of the Bitcoin Cash protocol written in Go that utilizes btcsuite. The authors [acknowledge](https://www.copernicuscore.org/btcd.html) btcsuite's contribution to the Bitcoin ecosystem.
 
 ## About This Issue
 
