--- a/journal/201812.md
+++ b/journal/201812.md
@@ -4,6 +4,8 @@
 
 {introduction, major news of the month}
 
+{Happy New Year somewhere}
+
 {if release comes out in Dec, remind to verify signatures. Decred is one of the few cryptocurrency projects that actually cares to sign releases and there is a good reasons for that. Make sure the software you install is coming untampered directly from the developers}
 
 ## Development
@@ -103,13 +105,15 @@ Dev activity stats for December: {} active PRs, {} master commits, {} added and 
 
 {welcome new individual and company contractors listed on decred.org, updates from existing}
 
-Around summer [@30000fps](https://twitter.com/30000fps) began contributing to Decred identity in the areas of motion design and graphics. {ask linnutee to improve, reference some contrib}
+[30000fps](http://30000fps.com) has been a Decred design contributor since 2018 summer. One goal of his works has been about bringing a spotlight to the developments by finding meaningful ways to visualise and illustrate the processes and features otherwise unseen. Examples can be seen from the recent development visuals ([v1.4.0 release](https://user-images.githubusercontent.com/17774057/50576201-3e124e80-0e15-11e9-83cd-28b50cfd9357.gif) (4 MB), [Politeia release](https://twitter.com/decredproject/status/1052203697986363392), [v1.3.0 release](https://twitter.com/decredproject/status/1044693349205200896)), as well the overhaul of decred.org subpage headers.
 
 3 contributors were [removed](https://github.com/decred/dcrweb/pull/472) from the decred.org website.
 
 {interviews about people}
 
 Several contractors shared their onboarding experiences [in this chat](https://matrix.to/#/!lbzTjhzNbIaDbuAxkS:decred.org/$154508806344819aIkBV:decred.org), which is a good, first-hand account to read in order to understand what the onboarding process might look like, particularly of note to those potentially interested in becoming Decred contractors.
+
+https://medium.com/@richardred/working-for-the-decred-dae-a9cfb17686fa
 
 ## Governance
 
@@ -235,6 +239,7 @@ Articles:
 * https://coinrivet.com/the-practical-cypherpunk-marco-peereboom-of-decred/
 * https://www.ccn.com/2018-in-4-words-icos-and-ethereum-are-dead/
 * https://51pct.io/decred-governance-and-funding-reimagined/ (part is behind a paywall)
+* https://medium.com/@richardred/working-for-the-decred-dae-a9cfb17686fa
 
 Above are most interesting articles, but more were published on the web. The [decred-media-tracker](https://github.com/RichardRed0x/decred-media-tracker) project is intended to track all articles.
 
@@ -284,6 +289,8 @@ For yet another time, a lot of strange Reddit activity was timed close to our ma
 [@Murad Mahmudov](https://twitter.com/muststopmurad) dropped into the Decred comms to share his thoughts about [the steps Decred should take](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$15459293712709dEJuG:decred.org) to pave the way for its success by highlighting aspects that make it remarkably attractive as a Store of Value as it is
 > hypersecure, smoothly-upgradeable, sustainable, unforkable, self-funding SoV with strict assurances and coinholders having more voice than other systems.
 
+{decred-issues, including consensus name}
+
 {selected discussed topics, as bullet list or one paragraph per topic}
 
 Reddit: {interesting threads}
@@ -332,6 +339,8 @@ Coinbase seeks to own term "BUIDL" https://www.coindesk.com/coinbase-wants-to-ow
 https://www.coindesk.com/executives-at-korean-crypto-exchange-upbit-indicted-for-fraud
 
 Many cryptocurrency services and projects seem to be owned or co-owned by a couple of entities https://twitter.com/tangleblog/status/1068094875533479937
+
+Several centralized exchanges [failed](https://www.ccn.com/several-exchanges-said-to-be-failing-bitcoin-ownership-event/) to serve withdrawals during the annual [Proof-of-Keys](https://www.proofofkeys.com/) event.
 
 {other: regulations, security, fun}
 
