Dev dcrd, dcrwallet

--- a/journal/201812.md
+++ b/journal/201812.md
@@ -6,23 +6,19 @@
 
 {Happy New Year somewhere}
 
-{if release comes out in Dec, remind to verify signatures. Decred is one of the few cryptocurrency projects that actually cares to sign releases and there is a good reasons for that. Make sure the software you install is coming untampered directly from the developers}
+{if software release comes out before Journal release, remind to verify signatures. Decred is one of the few cryptocurrency projects that actually cares to sign releases and there is a good reasons for that. Make sure the software you install is coming untampered directly from the developers}
+
+Release candidates of core software v1.4.0 are available for download [on GitHub](https://github.com/decred/decred-binaries/releases/tag/v1.4.0-rc2). Enthusiasts are free to try them while regular users are advised to wait for the final release. As always, make sure to [verify signatures](https://docs.decred.org/advanced/verifying-binaries/).
 
 ## Development
 
-{per-project summary, drop items without updates}
+[dcrd](https://github.com/decred/dcrd): v1.4.0 RC2 was released. This version includes the [smart fee estimator](https://github.com/decred/dcrd/pull/1434) that allows to either minimize mining delay or the fee, depending on what the user needs. The feature is important for Lightning Network and as a general mechanism to handle network congestion, more details in its [issue](https://github.com/decred/dcrd/issues/1412). Whitelisted inbound peers are now [allowed](https://github.com/decred/dcrd/pull/1516) regardless of connection limit so that operators can always allow their own SPV clients. Several performace improvements to initial sync, validation and network operations are included. Users choosing to upgrade should note there is a one-time database migration which will take 30-60 minutes depending on hardware. See full list of changes in the [release notes](https://github.com/decred/decred-binaries/releases/tag/v1.4.0-rc2).
 
-Unless there is a binary release, new features and bugfixes are available on the master branches of the projects. This means they passed review from multiple developers and can be built from source by developers and enthusiasts, but there are no end user installers until the next release.
-
-For web based projects like Politeia, new merged work is usually available after the deployment which happens somewhere after the merge. For dcrdata block explorer, deployment is a bit more complex: new features go to master, are deployed to alpha, then to beta, and finally to stable. {keep or revert to per-project notice?}
-
-[dcrd](https://github.com/decred/dcrd): On December 15th, RC1 (Release Candidate 1) of v1.4 [was announced](https://www.reddit.com/r/decred/comments/a6a5fz/dcrd_version_140_release_candidate_1/). This version includes the [smart fee estimator](https://github.com/decred/dcrd/pull/1434), a long awaited feature that allows selections to either minimize mining delay or the fee rate, depending on what the user needs. The feature is explained in detail in its [issue](https://github.com/decred/dcrd/issues/1412). Whitelisting peers is now supported [regardless of number of connections](https://github.com/decred/dcrd/pull/1516) allowing for greater control over which nodes dcrd connects to, including wallets configured to use SPV mode.  Several performace improvements to initial sync, validation and network operations are included. Users choosing to upgrade should note there is a one-time data database migration to incorporate these changes which will take 30-60 minutes on average depending on hardware. The team [completed module versions bumps](https://github.com/decred/dcrd/pull/1541) in preparation for the v1.4 release.
-
-A vulnerability {link} was discovered in `go get` tool that allowed remote code execution when using a malicious repository. dcrd and dcrwallet were **not affected** because they recently switched to a more secure modules system. Latest versions of dependencies are not automatically grabbed like they are in npm. Additionally, for dcrd all changes to dependencies except the runtime are audited. That is part of the reason it takes so much effort to prepare dcrd releases and why the number of dependencies should be limited. Discussed in [this chat](https://matrix.to/#/!HEeJkbPRpAqgAwhXWO:decred.org/$154476448242812wqgkf:decred.org)
+A [vulnerability](https://seclists.org/oss-sec/2018/q4/254) was patched in `go get` tool that allowed remote code execution when using a malicious repository. dcrd and dcrwallet were **not affected** because they recently switched to a more secure modules system. Latest versions of dependencies are not automatically grabbed like they are in npm. Additionally, for dcrd all changes to dependencies except the Go runtime are audited. That is part of the reason it takes so much effort to prepare dcrd releases and why the number of dependencies should be limited. More details in [this chat](https://matrix.to/#/!HEeJkbPRpAqgAwhXWO:decred.org/$154476448242812wqgkf:decred.org)
 
 Discussion [started](https://github.com/decred/dcrd/issues/1556) to implement Child Pays For Parent (CPFP) in dcrd.
 
-[dcrwallet](https://github.com/decred/dcrwallet): Tor connections from wallet to node will be available in the next release, development solved a proxy support issue [preventing connection from dcrwallet to dcrd via Tor](https://github.com/decred/dcrwallet/pull/1294). Capitalizing on sufficient network upgrades, modifications were completed to [reduce the default transaction fee](https://github.com/decred/dcrwallet/pull/1339) to 0.0001 DCR.
+[dcrwallet](https://github.com/decred/dcrwallet): v1.4.0 RC2 was released that fixes a lot of bugs related to SPV and error handling and adds a host of new gRPC endpoints that will enable new features in end user UIs. Tor connections from dcrwallet to dcrd node are now possible via the missing [proxy mode](https://github.com/decred/dcrwallet/pull/1294). Default transaction relay fee was dropped to 0.0001 DCR given sufficient network upgrades. More changes in the [release notes](https://github.com/decred/decred-binaries/releases/tag/v1.4.0-rc2).
 
 [Decrediton](https://github.com/decred/decrediton): On December 16th, RC1 (Release Candidate 1) of v1.4 [was posted](https://github.com/decred/decred-binaries/releases/tag/v1.4.0-rc1). Initial Trezor support [is included](https://github.com/decred/decrediton/pull/1547) allowing users to use Decrediton as a "watch-only" wallet signing transactions from Trezor. The feature will likely be hidden behind a config option until it gets enough testing.  Staking is not included in the initial version. Selecting SPV (simple payment verification) was made easier with a new [SPV selection page](https://github.com/decred/decrediton/pull/1766). Animations from [Eeter](http://www.eeter.co/) were [added for menu hover](https://github.com/decred/decrediton/pull/1816) along with a number of other style improvements including restyling [the governance page](https://github.com/decred/decrediton/pull/1844) and merging the requirements for [color themes](https://github.com/decred/decrediton/pull/1749). Users of the Raspberry Pi (and other ARM processor device) will have access to Decrediton thanks to [work by MatheusD](https://github.com/decred/decrediton/pull/1904) (note that [Command Line App Suite](https://www.decred.org/downloads/) has always been available for Pi). [Various design fixes](https://github.com/decred/decrediton/pull/1844), [big fixes](https://github.com/decred/decrediton/pull/1874) and [required patches]() were implemented. An [updated version of release notes](https://github.com/decred/decrediton/pull/1854) that allows translations and past information got included. A new feature to [contruct unsigned transactions](https://github.com/decred/decrediton/pull/1864) for watch-only wallets was developed (so transactions could be created on the watch-only wallet then signed and broadcast on the full wallet).
 
