Dev: add info from raedah

--- a/journal/201812.md
+++ b/journal/201812.md
@@ -30,11 +30,15 @@ A lot of [design work](https://github.com/decred/decrediton/issues?utf8=%E2%9C%9
 
 In progress are admin [data backups](https://github.com/decred/politeia/issues/605) and two big changes to scale the server: [cache layer](https://github.com/decred/politeia/issues/546) and [websockets support](https://github.com/decred/politeia/issues/547).
 
-[Android wallet](https://github.com/decred/dcrandroid): v1.0.0 release candidate 2 is [available](https://www.reddit.com/r/decred/comments/a846ch/decred_wallet_for_android_release_candidate/). See Google Play Store for [mainnet](https://play.google.com/store/apps/details?id=com.decred.dcrandroid.mainnet) and [testnet](https://play.google.com/store/apps/details?id=com.decred.dcrandroid.testnet) versions, the list of improvements can be found [on GitHub](https://github.com/decred/dcrandroid/tree/v1.0.0-rc2).
+[Android wallet](https://github.com/decred/dcrandroid): v1.0.0 release candidate 2 is available on Google Play for [mainnet](https://play.google.com/store/apps/details?id=com.decred.dcrandroid.mainnet) and [testnet](https://play.google.com/store/apps/details?id=com.decred.dcrandroid.testnet). Seed verification and seed restore interfaces were completely redone, several bugs fixed. The list of improvements can be found [on GitHub](https://github.com/decred/dcrandroid/tree/v1.0.0-rc2).
+
+Next RC to be released shortly will include several minor bug fixes as well as a better display of the status during initial sync which was requested by a handful of people.
+
+Focus has been on the streamlining the setup experience for new users since thats the first thing they will see and can sometimes be tedious. 
 
 Limitations of wallet encryption and risks of staking on insecure Android smartphones was discussed in [this chat](https://matrix.to/#/!HEeJkbPRpAqgAwhXWO:decred.org/$154533559847474ZIrlD:decred.org).
 
-[iOS wallet](https://github.com/raedahgroup/dcrios): catching up on features with Android wallet.
+[iOS wallet](https://github.com/raedahgroup/dcrios): has mostly just been syncing up with the changes from Android. iOS testing releases will be made available as soon as Android 1.0 is done.
 
 [dcrdata](https://github.com/decred/dcrdata): v3.1.1 is released on [explorer.dcrdata.org](https://explorer.dcrdata.org/). Highlights include new pages for [sidechains](https://explorer.dcrdata.org/side) and [disapproved blocks](https://explorer.dcrdata.org/rejects), major performance improvements, Go modules support, non-javascript mode [improvements](https://github.com/decred/dcrdata/pull/852) _(thanks from an anti-js dinosaur!)_. See full release notes [here](https://github.com/decred/dcrdata/releases/tag/v3.1.0). The release includes 129 commits from 4 months of work made by 16 code contributors. Congrats to dcrdata team!
 
