--- a/journal/201812.md
+++ b/journal/201812.md
@@ -26,7 +26,7 @@ On the master branch (i.e. not included in the 1.4 release), Decrediton can now 
 
 A lot of [design work](https://github.com/decred/decrediton/issues?utf8=%E2%9C%93&q=is%3Aissue+author%3Alinnutee+created%3A2018-12-01..2018-12-31) is completed and ready for implementation.
 
-[Politeia](https://github.com/decred/politeia): long awaited feature to [view the difference](https://github.com/decred/politeiagui/pull/949) between proposal versions is finished. politeiavoter now [retries failed requests](https://github.com/decred/politeia/pull/639) which fixes Tor usage. Comment vote score calculation was fixed by [moving](https://github.com/decred/politeia/pull/610) it from politeiad to politeiawww. Proposals now [cannot be abandoned](https://github.com/decred/politeiagui/pull/936) after voting was authorized. These and smaller fixes will be available on the [proposals](https://proposals.decred.org/) site after the next deployment.
+[Politeia](https://github.com/decred/politeia): a feature to view [old proposal versions](https://github.com/decred/politeiagui/pull/949) is added as part of building the [version diff](https://github.com/decred/politeiagui/issues/973) viewer, which needs more polish. politeiavoter now [retries failed requests](https://github.com/decred/politeia/pull/639) which fixes Tor usage. Comment vote score calculation was fixed by [moving](https://github.com/decred/politeia/pull/610) it from politeiad to politeiawww. Proposals now [cannot be abandoned](https://github.com/decred/politeiagui/pull/936) after voting was authorized. These and smaller fixes will be available on the [proposals](https://proposals.decred.org/) site after the next deployment.
 
 In progress are admin [data backups](https://github.com/decred/politeia/issues/605) and two big changes to scale the server: [cache layer](https://github.com/decred/politeia/issues/546) and [websockets support](https://github.com/decred/politeia/issues/547).
 
@@ -56,13 +56,13 @@ Developers can check the new [Docker image](https://github.com/decred/dcrdocker/
 
 Other:
 
-* @matheusd has proposed a [Raspberry Pi offline tx signer](https://www.reddit.com/r/decred/comments/a3bfyi/raspberry_pi_offline_transaction_signer/) and produced a [live demo](https://www.youtube.com/watch?v=xbSoZ7GH1_k&t=7s) of it.
-* [authit](https://authit.co/), dcrtime UI proof of concept. Source is [here](https://github.com/getset0/authit), discussed [here](https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$154454253739832PpXgR:decred.org). Credits to @fernandoabolafio, @tiagoalvesdulce and @vctt. The repository was moved to Decred [GitHub organization](https://github.com/decred/authit)
-* @devwarrior is working in a proof of concept UI [atomicswaps](https://github.com/xaur/decred-issues/issues/8#issuecomment-447220453).
+* @matheusd proposed a proof of concept [offline tx signer](https://www.reddit.com/r/decred/comments/a3bfyi/raspberry_pi_offline_transaction_signer/) that allows to sign transactions on a different machine (Raspberry Pi). Let him know if you find it useful.
+* [authit](https://authit.co/) is a proof of concept UI for timestamping files via [dcrtime](https://github.com/decred/dcrtime). [Source code](https://github.com/decred/authit) is now under decred organization, discussion is [here](https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$154454253739832PpXgR:decred.org). Credits to @fernandoabolafio, @tiagoalvesdulce and @vctt.
+* @devwarrior is [working](https://github.com/xaur/decred-issues/issues/8#issuecomment-447220453) on a proof of concept UI for atomic swaps. Contact him [in chat](https://decred.slack.com/team/U6056C1NE) to collaborate and bring it to Decred.
 * Company 0 does not plan to charge Treasury for the privacy work, as clarified in [this thread](https://www.reddit.com/r/decred/comments/a6l00i/why_is_the_community_not_voting_on_implementing/)
-* Pull request adding [QTUM support](https://github.com/decred/atomicswap/pull/93) to atomicswap was submitted, feel free to join review and testing.
-* Efforts to coordinate vital Decred article [translation](https://github.com/artikozel/decred-translations) are being undertaken in order to introduce a greater, non-English speaking user base to core Decred concepts.
-* Decred CLI tools can be built to run on Alpine Linux that uses [musl](https://www.musl-libc.org/) (cleaner implementation of libc), read [this chat](https://matrix.to/#/!HEeJkbPRpAqgAwhXWO:decred.org/$15457968071823GYapk:decred.org) for details
+* Pull request adding [QTUM support](https://github.com/decred/atomicswap/pull/93) to atomicswap was submitted, feel free to join review and testing. An earlier [Ethereum support](https://github.com/decred/atomicswap/pull/76) can also enjoy more eyeballs.
+* Decred command line tools can be built to run on Alpine Linux that uses [musl](https://www.musl-libc.org/) (cleaner implementation of libc), read [this chat](https://matrix.to/#/!HEeJkbPRpAqgAwhXWO:decred.org/$15457968071823GYapk:decred.org) for details.
+* Efforts to coordinate vital Decred article [translations](https://github.com/artikozel/decred-translations) are being undertaken to introduce a greater, non-English speaking user base to core Decred concepts.
 
 Dev activity stats for December: {} active PRs, {} master commits, {} added and {} deleted lines spread across {} repositories. Contributions came from {}-{} developers per repository. ([chart]({}))
 
