--- a/journal/201812.md
+++ b/journal/201812.md
@@ -76,17 +76,24 @@ Several contractors shared their onboarding experiences [in this chat](https://m
 
 ## Governance
 
-{high level recap of decision-making activity, most important events, defer to Politeia Digest for the rest}
+In December the Treasury received 17,016 DCR and spent 12,570 DCR {multiply by average Dec USD rate for convenience?}.
 
-{bounty prop passed, interesting fact about pseudonymous contributor https://twitter.com/lukebp_/status/1078691610253250560}
+Here are short proposal updates as of Jan 10. Please do not rely on them to form your opinion about the proposals and read the original texts and discussions on Politeia.
 
-{income and spendings from treasury}
+* Open Source Research: Politeia data research and Git contributor analysis are progressing, 4 new research ideas were posted in the proposals. Please cast your comment votes to give the research team a better feeling of what is needed most.
+* Stablecoin proposal was mostly criticized, author canceled the proposal.
+* Coffee Wallet integration: the owner offered to reduce the requested amount but the community was generally not too excited about paying for integrations. Proposal was abandoned.
+* Rejected proposals: Radio ads (69% No), Decredex (96% No), ATM integration (89% No); participation varied between 24-31%.
+* Baeond futurepunk autonomous card game: discussions ongoing, author engaged in comments and chat and updated the proposal in response to feedback, many people are confused about how it will benefit Decred.
+* Smart Reach partnership: discussions ongoing.
 
-https://matrix.to/#/!lbzTjhzNbIaDbuAxkS:decred.org/$154502025444491kdLiq:decred.org discusses staying frugal with the spendings, especially during bad market conditions
+Bug bounty proposal was approved with 90% Yes and 30% participation. @degeri showed a great example of going through all the stages: join the community and demonstrate the ability to do useful work, identify something missing, draft an idea and put it through several rounds of feedback, submit a proposal, engage with commenters and adjust it further, and finally gain the support. A [notable fact](https://twitter.com/lukebp_/status/1078691610253250560) here is that Decred is one of the few projects where a pseudonymous contributor can build up trust and become successful by establishing a track record of delivering high quality work.
 
-https://www.reddit.com/r/decred/comments/aa5jvn/any_updates_on_antonopouloss_veiw_of_decred/ addressed common arguments against Decred's governance system: "we don't know if the governance system works because it hasn't failed yet" and "there hasn't been anything controversial yet"
+To avoid common mistakes and build a successful proposal, make sure to read the new [Proposal Guidelines](https://docs.decred.org/governance/politeia/proposal-guidelines/) by @s_ben (inspired by an excellent [comment](https://proposals.decred.org/proposals/85fc65cef080cfc3564906fd3d488b827d74fc99bb29143ed8aa6c400b765be9/comments/2) by @nnnko56).
 
-avoid common pitfalls https://docs.decred.org/governance/politeia/proposal-guidelines/
+Discussions: [this chat](https://matrix.to/#/!lbzTjhzNbIaDbuAxkS:decred.org/$154502025444491kdLiq:decred.org) discusses staying frugal with the spendings, especially during bad market conditions. [This thread](https://www.reddit.com/r/decred/comments/aa5jvn/any_updates_on_antonopouloss_veiw_of_decred/) dismantled common arguments against Decred's governance system: "we don't know if the governance system works because it hasn't failed yet" and "there hasn't been anything controversial yet".
+
+A much more nuanced coverage of Politeia activity is provided by @richardred in Politeia Digest [issue 8](https://medium.com/politeia-digest/issue-8-dec-5-dec-11-2018-23bb061a08a0) and [issue 9](https://medium.com/politeia-digest/issue-9-dec-12-dec-31-2018-67b65b5bf30). The digest captures a lot of interesting details for every proposal. Issue 9 contains a special 2018 year end statistics of Politeia data since its launch. You can find all past issues and leave feedback [here](https://www.reddit.com/r/decred/search?include_over_18=on&restrict_sr=on&q=politeia%20digest).
 
 ## Network
 
