--- a/journal/201812.md
+++ b/journal/201812.md
@@ -97,13 +97,15 @@ A much more nuanced coverage of Politeia activity is provided by @richardred in 
 
 ## Network
 
-Hashrate: December's hashrate opened at around 167 Ph/s and closed around 183 Ph/s, peaking at 207 Ph/s and bottoming at 110 Ph/s throughout the course of the month, averaging, for the most part, at around 150 Ph/s. BeePool's share of the hashrate varied wildly between 1.3%-29%, same for F2Pool at 2.8%-49%, Luxor 1%-6.5%, Coinmine 1%-2%. Unknown hashrate accounted for 45%-70% of the entire network's computing power with a low 33% and peak of 87%. Pool distribution numbers are approximate and cannot be accurately determined.
+Hashrate: December's hashrate opened at around 167 Ph/s and closed around 183 Ph/s, peaking at 207 Ph/s and bottoming at 110 Ph/s throughout the course of the month. For the most part, the average was 150 Ph/s. As if Jan 10, pool hashrate distribution: poolin 34%, F2pool 27%, UUPool 7.4%, btc.com 7%, Luxor 3.8%, BeePool 2.6%, coinmine 1.1%, others are 17% per [dcrstats.com](https://dcrstats.com/pow). Pool distribution numbers are approximate and cannot be accurately determined.
 
-Staking: 30-day average ticket price was 103 DCR. The price varied between 101.33 DCR and 107.09 DCR, with 4.14-4.23 million DCR locked, with highs and lows of 45.53%-46.23% of available supply at the time.
+Staking: 30-day average ticket price was 103 DCR (+0) per dcrstats.com. The price varied between 101 DCR and 107 DCR. Locked amount was 4.14-4.23 million DCR, which corresponded to 46.3-47.1% of the available supply.
 
-Nodes: As of Jan. 4 there are 211 public listening nodes and 269 normal ones per [dcred.eu](https://dcred.eu/nodeStats). Version distribution: 5.2% are v1.5.0 (pre) dev builds (+100%), 3.3% are v1.4.0 (rc1) (+100%), 13.4% are v1.4.0 (pre) (+6.9%), 43% are v1.3.0 (-7%), 28% are running v.1.2.0 (+3%), 16% are on v1.1.2 (+5%) and 7% are on v.1.1.0 (+2%).
+Nodes: As of Jan 1 there were 192 public listening nodes and 253 normal ones per [dcred.eu](https://dcred.eu/nodeStats). Version distribution: 1.5% are v1.5.0(pre) dev builds, 1.8% on v1.4.0(rc1), 5.3% on v1.4.0(pre) (-1.2%), 55% on v1.3.0 (+5%), 20% on v1.2.0 (-5%), 10% on v1.1.2 (-1%), 4% on v1.1.0 (-1%).
 
-Block 300,000 was mined this month. The mined DCR is now over 9,000,000! Congratulations to all!
+There are much more [interesting stats](https://github.com/xaur/decred-news/issues/41) we'd like to present in this section, let us know if you can help.
+
+Block 300,000 was mined in December and the mined DCR is now over 9,000,000. Congratulations to all!
 
 ## Mining
 
